Thu Oct 24 12:31:46 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/connectparams.c src/odbc/odbc.c:
	* src/tds/config.c:
	- dsn modify on odbc (old freetds.conf stuff)
	* src/tds/convert.c: add fix for indentation

Thu Oct 24 10:27:15 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: updated due to domain support on odbc

Wed Oct 23 22:44:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml include/tds.h src/odbc/odbc.c:
	- update dnsless work, domain should now work

Wed Oct 23 20:43:21 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c: use the correct field size (Bill patch)

Wed Oct 23 09:46:02 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds_configs.h:
	- Add missing path separator.

Wed Oct 23 07:40:58 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* doc/CodingStyle	reflects tabstop of 5
	- src/.indent.pro	added
	
Wed Oct 23 07:27:28 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c	Applied Bill's patch for missing column

Wed Oct 23 07:41:51 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.hsrc/dblib/bcp.c src/tds/mem.c src/tds/token.c:
	- some post Bill patches

Wed Oct 23 00:05:30 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt src/dblib/dblib.c:
	- Implement dbgetmaxprocs().

Tu Oct 22 22:15:52 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/cspublic.h include/sybdb.h include/tds.h
	  include/tdsutil.h src/apps/tsql.c src/ctlib/ct.c
	  src/ctlib/unittests/Makefile.am src/ctlib/unittests/t0004.c
	  src/ctlib/unittests/t0009.c (added) src/dblib/bcp.c src/dblib/dblib.c
	  src/dblib/unittests/Makefile.am src/dblib/unittests/t0023.c (added)
	  src/odbc/odbc.c src/tds/login.c src/tds/mem.c src/tds/token.c
	  src/tds/unittests/t0002.c src/tds/unittests/t0004.c
	  src/tds/unittests/t0005.c src/tds/unittests/t0006.c:
	- Merge Bill Thompson's infamous patch to add compute row support.