@@ -2,8 +2,8 @@
 ]>
 <book>
 	<bookinfo>
-		<date>$Date: 2002/10/24 08:28:24 $</date>
-		<releaseinfo>$Revision: 1.42 $</releaseinfo>
+		<date>$Date: 2002/10/24 12:20:16 $</date>
+		<releaseinfo>$Revision: 1.43 $</releaseinfo>
 		<title><productname>FreeTDS</productname> User Guide</title>
 		<subtitle>A Guide to Installing, Configuring and Running <productname>FreeTDS</productname></subtitle>
 		<author>
@@ -46,9 +46,9 @@ This guide is here for you, and we hope that you will be here for it, that other
 			<para>
 A few technical notes.  This guide is written in SGML DocBook format, specifications for which are found in the <ulink url="http://www.docbook.org/tdg/en/html/docbook.html">DocBook book</ulink>.  It was converted to HTML with <ulink url="http://openjade.sourceforge.net">OpenJade</ulink>.  
 The document you are reading is version 
-$Revision: 1.42 $
+$Revision: 1.43 $
 , dated 
-$Date: 2002/10/24 08:28:24 $ (CVS control number $Id: userguide.sgml,v 1.42 2002/10/24 08:28:24 freddy77 Exp $).  The most recent version can be found on the <productname>FreeTDS</productname> 
+$Date: 2002/10/24 12:20:16 $ (CVS control number $Id: userguide.sgml,v 1.43 2002/10/24 12:20:16 freddy77 Exp $).  The most recent version can be found on the <productname>FreeTDS</productname> 
 <ulink url="http://www.freetds.org/userguide/">web site</ulink>, where you will also find the most up to date <ulink url="http://www.freetds.org/faq.html">FAQ</ulink>, as well as links to the anonymous and browseable CVS tree.  The SGML text is distributed with the rest of the source code, and may be edited with your favorite or least favorite text editor.  
 			</para>
 			<para> 
@@ -1837,7 +1837,7 @@ The <literal>-g</literal> is important to keep the symbol tables for debugging p
 <para>New configuration method (dnsless and freetds.conf'less)</para>
 <tip><sidebar><para>
 This part of documentation is still in developing, so is subject to change. 
-Old server specification not supported (using freetds.conf), global of freetds.conf never readed.
+Global of freetds.conf readed only for freetds.conf configurations.
 </para></sidebar></tip>
 
 <para>
@@ -1862,7 +1862,7 @@ can be stored in odbc.ini. To support this method some options has been added.
 	<entry>Servername</entry>
 	<entry>none</entry>
 	<entry>This is old server specification. This refer to freetds.conf server name, not real server. If you want
-	       to use freetds.conf'less configuration use Server instead. Work in progress: for the moment it doesn't work. </entry>
+	       to use freetds.conf'less configuration use Server instead.</entry>
 	<entry>A valid freetds.conf server section</entry>
 	</row>
 	<row>
@@ -1874,7 +1874,7 @@ can be stored in odbc.ini. To support this method some options has been added.
 	<row>
 	<entry>Port</entry>
 	<entry>depend from TDS version specified with configure</entry>
-	<entry>This the tcp/ip port of SQL Server.</entry>
+	<entry>The tcp/ip port of SQL Server.</entry>
 	<entry>Any TCP port</entry>
 	</row>
 	<row>
@@ -1912,8 +1912,7 @@ can be stored in odbc.ini. To support this method some options has been added.
 	<row>
 	<entry>LANGUAGE</entry>
 	<entry>us_english</entry>
-	<entry>This can be specified only in dsnless connection. Language used by server. 
-		Work in progress: even in DSN connections.</entry>
+	<entry>Language used by server.</entry>
 	<entry>Any</entry>
 	</row>
 </tbody>
